Update some deprecated methods (#2233)
* Update some deprecated methods

* Revert the change

* Use StandardCharsets whenever possible.

* Update

* Skip some tests. I have no idea why it works with java 8 and not with
Java 14

* Update

* Remove no longer supported API ShellFolder.

It can disallow to show the symlink folders. It need testing.

* Revert "Remove no longer supported API ShellFolder."

This reverts commit f3a43d4c18f78d5aacf828f298b9c5f1e68263b2.

* Update maven plugins to meet the Java 1.8

* Update other deprecated methods

* Use org.h2.util.IOUtils instead of deprecated

org.apache.commons.io.IOUtils

* Remove unused imports

* Maybe Eclipse warning

"Resource leak: '<unassigned Closeable value>' is not closed at
this location" is not relevant but those changes not harm the code.

* Update test

* Update the FileUtilTest